@@ -1,3 +1,9 @@
+2008-07-16  Badlop  <badlop@process-one.net>
+
+	* doc/guide.tex: Improve explanation of option 'hosts' in
+	ejabberd_service
+	* doc/guide.html: Likewise
+
 2008-07-12  Badlop  <badlop@process-one.net>
 
 	* src/configure.ac: Improve legibility
